comp-transform/testsuite/good/CatCheckInFunc/CatCheckInFunc.hs
{-# LANGUAGE ComposableTypes #-}

module CatCheckInFunc where

piececategory A

d :: for A ==> a. a -> a
d a = a
