comp-transform/testsuite/bad/OrderForLiftSum/OrderForLiftSum.hs
{-# LANGUAGE ComposableTypes #-}

module Main where

piececategory A

eval -: Bool -> A -> Int
